# onehousing-properties

./: .gitignore  buildings.json  data.json  floors.json  main.py  pyproject.toml  repo.py
properties/: properties.0.json  properties.1.json  properties.10.json  properties.11.json  properties.12.json  properties.13.json  properties.14.json  properties.15.json  properties.2.json  properties.3.json  properties.4.json  properties.5.json  properties.6.json  properties.7.json  properties.8.json  properties.9.json
